--- a/bower.json
+++ b/bower.json
@@ -37,6 +37,7 @@
     "datatables-responsive": "~1.0.3",
     "bootstrap-social": "~4.8.0",
     "flot.tooltip": "~0.8.4",
-    "summernote": "~0.6.13"
+    "summernote": "~0.6.13",
+    "bootstrap-validator": "~0.9.0"
   }
 }
