--- a/bower.json
+++ b/bower.json
@@ -38,6 +38,7 @@
     "bootstrap-social": "~4.8.0",
     "flot.tooltip": "~0.8.4",
     "summernote": "~0.6.13",
-    "bootstrap-validator": "~0.9.0"
+    "bootstrap-validator": "~0.9.0",
+    "bootstrap3-dialog": "~1.34.5"
   }
 }
