--- a/bower.json
+++ b/bower.json
@@ -39,6 +39,7 @@
     "flot.tooltip": "~0.8.4",
     "summernote": "~0.6.13",
     "bootstrap-validator": "~0.9.0",
-    "bootstrap3-dialog": "~1.34.5"
+    "bootstrap3-dialog": "~1.34.5",
+    "notifyjs": "~0.3.2"
   }
 }
