--- a/bower.json
+++ b/bower.json
@@ -27,23 +27,24 @@
   ],
   "dependencies": {
     "bootstrap": "~3.3.1",
-    "datatables": "~1.10.4",
-    "datatables-plugins": "~1.0.1",
-    "flot": "~0.8.3",
-    "font-awesome": "~4.2.0",
-    "holderjs": "~2.4.1",
-    "metisMenu": "~1.1.3",
-    "morrisjs": "~0.5.1",
-    "datatables-responsive": "~1.0.3",
+    "bootstrap-material-design": "~0.3.0",
     "bootstrap-social": "~4.8.0",
-    "flot.tooltip": "~0.8.4",
     "bootstrap-validator": "~0.9.0",
     "bootstrap3-dialog": "~1.34.5",
-    "notifyjs": "~0.3.2",
-    "bootstrap-material-design": "~0.3.0",
     "ckeditor": "~4.5.2",
-    "spin.js": "~2.3.2",
+    "datatables": "~1.10.4",
+    "datatables-plugins": "~1.0.1",
+    "datatables-responsive": "~1.0.3",
+    "fancybox": "~2.1.5",
+    "flot": "~0.8.3",
+    "flot.tooltip": "~0.8.4",
+    "font-awesome": "~4.2.0",
+    "holderjs": "~2.4.1",
+    "jquery.countdown": "~2.1.0",
     "lodash": "~3.10.1",
-    "fancybox": "~2.1.5"
+    "metisMenu": "~1.1.3",
+    "morrisjs": "~0.5.1",
+    "notifyjs": "~0.3.2",
+    "spin.js": "~2.3.2"
   }
 }
