--- a/bower.json
+++ b/bower.json
@@ -45,6 +45,7 @@
     "metisMenu": "~1.1.3",
     "morrisjs": "~0.5.1",
     "notifyjs": "~0.3.2",
-    "spin.js": "~2.3.2"
+    "spin.js": "~2.3.2",
+    "excellentexport": "*"
   }
 }
